2016-04-08 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix some compiler warnings

2016-04-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Support restricted selection lines

2016-04-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjust file type letters

2016-03-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Change verbosity levels to ease debugging

2016-03-28 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix '.*'-rule matching and code cleanup

2016-03-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix compilation issue with e2fsprogs 1.43

2016-03-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix report layout

2016-03-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix segfault when DB_CHECKINODE is used

2016-03-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add new '--limit' parameter

2016-03-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Sort entries of database file

2016-02-27 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Switch to Perl 5 Compatible Regular Expressions, changes include:
	  - require PCRE library
	  - drop bundled GNU regexp library
	* src/commandconf.c: add warning if a group is redefined

2016-02-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add new 'database_add_metadata' option

2016-02-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add new 'report_quiet' option

2015-11-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Use single Makefile.am
	* doc/aide.conf.5.in: minor fixes

2015-11-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c: minor code cleanup

2015-11-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Rewrote handling of ignored/forced attributes, changes include:
	  - new 'report_ignore_added_attrs' option
	  - new 'report_ignore_removed_attrs' option
	  - print human-readable info about ignored attributes in report
	  - code cleanup
	  - bug fixes

2015-11-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added new 'report_ignore_e2fsattrs' option
